RESOLVED FIXED300173
_WKWebPushDaemonConnectionConfiguration leaks instance variables
https://bugs.webkit.org/show_bug.cgi?id=300173
Summary _WKWebPushDaemonConnectionConfiguration leaks instance variables
David Kilzer (:ddkilzer)
Reported 2025-10-04 09:38:45 PDT
_WKWebPushDaemonConnectionConfiguration leaks instance variables because it's missing a -dealloc method under MRR.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-04 09:39:12 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-10-04 09:44:30 PDT
EWS
Comment 3 2025-10-10 05:13:04 PDT
Committed 301312@main (6a3704d355a1): <https://commits.webkit.org/301312@main> Reviewed commits have been landed. Closing PR #51812 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.