_WKWebPushDaemonConnectionConfiguration leaks instance variables <https://bugs.webkit.org/show_bug.cgi?id=300173> <rdar://161958379>

Reviewed by Geoffrey Garen.

Regressed in 283218@main.

* Source/WebKit/UIProcess/API/Cocoa/_WKWebPushDaemonConnection.h:
(_WKWebPushDaemonConnectionConfiguration.partition):
(_WKWebPushDaemonConnectionConfiguration.bundleIdentifierOverrideForTesting):
- Mark properties as `nullable` since the init method doesn't set them.
* Source/WebKit/UIProcess/API/Cocoa/_WKWebPushDaemonConnection.mm:
(-[_WKWebPushDaemonConnectionConfiguration init]):
- Use setter to make sure `_machServiceName` is retained.
(-[_WKWebPushDaemonConnectionConfiguration dealloc]): Add.
- Release instance variables to fix leaks.

Canonical link: https://commits.webkit.org/301312@main